--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.3",
     "next": "11.0.1",
+    "next-i18next": "^8.6.0",
     "react": "17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
